; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_icase.c_test_checkout_icase__overwrites_files_for_folders_when_forced.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_icase.c_test_checkout_icase__overwrites_files_for_folders_when_forced.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GIT_CHECKOUT_FORCE = common dso_local global i32 0, align 4
@checkout_opts = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@.str = private unnamed_addr constant [11 x i8] c"testrepo/A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"neue file\0A\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@obj = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [11 x i8] c"testrepo/a\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_checkout_icase__overwrites_files_for_folders_when_forced() #0 {
  %1 = load i32, i32* @GIT_CHECKOUT_FORCE, align 4
  store i32 %1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @checkout_opts, i32 0, i32 0), align 4
  %2 = load i32, i32* @O_WRONLY, align 4
  %3 = load i32, i32* @O_CREAT, align 4
  %4 = or i32 %2, %3
  %5 = load i32, i32* @O_TRUNC, align 4
  %6 = or i32 %4, %5
  %7 = call i32 @cl_git_write2file(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 10, i32 %6, i32 420)
  %8 = load i32, i32* @repo, align 4
  %9 = load i32, i32* @obj, align 4
  %10 = call i32 @git_checkout_tree(i32 %8, i32 %9, %struct.TYPE_3__* @checkout_opts)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = call i32 @assert_name_is(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %13 = call i32 @git_path_isdir(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %14 = call i32 @cl_assert(i32 %13)
  ret void
}

declare dso_local i32 @cl_git_write2file(i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_checkout_tree(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @assert_name_is(i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_isdir(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
